# docs/swagger.yaml
@@ -2,13 +2,10 @@ basePath: /
 definitions:
   api.createTodoRequest:
     properties:
-      owner:
-        type: string
       title:
         maxLength: 255
         type: string
     required:
-    - owner
     - title
     type: object
   api.createUserRequest:
@@ -32,18 +29,6 @@ definitions:
     - password
     - username
     type: object
-  api.createUserResponse:
-    properties:
-      email:
-        example: jain@jaingounchained.com
-        type: string
-      fullName:
-        example: Jain Bhavya
-        type: string
-      username:
-        example: jaingounchained
-        type: string
-    type: object
   api.getTodoAttachmentMetadataResponse:
     properties:
       attachmentId:
@@ -53,12 +38,66 @@ definitions:
       todoId:
         type: integer
     type: object
+  api.loginUserRequest:
+    properties:
+      password:
+        example: weak_password
+        minLength: 6
+        type: string
+      username:
+        example: jaingounchained
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  api.loginUserResponse:
+    properties:
+      accessToken:
+        type: string
+      accessTokenExpiredAt:
+        type: string
+      refreshToken:
+        type: string
+      refreshTokenExpiredAt:
+        type: string
+      sessionId:
+        type: string
+      user:
+        $ref: '#/definitions/api.userResponse'
+    type: object
+  api.renewAccessTokenRequest:
+    properties:
+      refreshToken:
+        type: string
+    required:
+    - refreshToken
+    type: object
+  api.renewAccessTokenResponse:
+    properties:
+      accessToken:
+        type: string
+      accessTokenExpiredAt:
+        type: string
+    type: object
   api.updateTodoRequestBody:
     properties:
       status:
         type: string
       title:
         maxLength: 255
+        type: string
+    type: object
+  api.userResponse:
+    properties:
+      email:
+        example: jain@jaingounchained.com
+        type: string
+      fullName:
+        example: Jain Bhavya
+        type: string
+      username:
+        example: jaingounchained
         type: string
     type: object
   db.Todo:
@@ -118,12 +157,18 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/db.Todo'
+              items:
+                $ref: '#/definitions/db.Todo'
+              type: array
             type: array
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: List todos
       tags:
       - todos
@@ -147,8 +192,12 @@ paths:
             $ref: '#/definitions/db.Todo'
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: Creates a Todo
       tags:
       - todos
@@ -169,10 +218,14 @@ paths:
           description: OK
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "404":
           description: Not Found
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: Deletes a Todo
       tags:
       - todos
@@ -194,10 +247,14 @@ paths:
             $ref: '#/definitions/db.Todo'
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "404":
           description: Not Found
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: Returns a Todo
       tags:
       - todos
@@ -227,10 +284,14 @@ paths:
             $ref: '#/definitions/db.Todo'
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "404":
           description: Not Found
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: Updated the todo title/status
       tags:
       - todos
@@ -255,12 +316,16 @@ paths:
             $ref: '#/definitions/api.getTodoAttachmentMetadataResponse'
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "403":
           description: Forbidden
         "404":
           description: Not Found
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: Get attachments metadata
       tags:
       - attachments
@@ -288,6 +353,8 @@ paths:
           description: OK
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "403":
           description: Forbidden
         "404":
@@ -298,6 +365,8 @@ paths:
           description: Unsupported Media Type
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: Upload attachments
       tags:
       - attachments
@@ -324,12 +393,16 @@ paths:
           description: OK
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "404":
           description: Not Found
         "413":
           description: Request Entity Too Large
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: Delete attachment
       tags:
       - attachments
@@ -357,15 +430,51 @@ paths:
           description: OK
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
         "403":
           description: Forbidden
         "404":
           description: Not Found
         "500":
           description: Internal Server Error
+      security:
+      - AccessTokenAuth: []
       summary: Get attachments
       tags:
       - attachments
+  /tokens/renewAccess:
+    post:
+      consumes:
+      - application/json
+      description: Renew the access token through the refresh token
+      parameters:
+      - description: Refresh token
+        in: body
+        name: refreshToken
+        required: true
+        schema:
+          $ref: '#/definitions/api.renewAccessTokenRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.renewAccessTokenResponse'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Renew access token
+      tags:
+      - users
   /users:
     post:
       consumes:
@@ -384,12 +493,52 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.createUserResponse'
+            $ref: '#/definitions/api.userResponse'
         "400":
           description: Bad Request
+        "403":
+          description: Forbidden
         "500":
           description: Internal Server Error
       summary: Creates a User
       tags:
       - users
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      description: Returns an access token for accessing user resources
+      parameters:
+      - description: User login credentials
+        in: body
+        name: loginCredentials
+        required: true
+        schema:
+          $ref: '#/definitions/api.loginUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.loginUserResponse'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: User login
+      tags:
+      - users
+securityDefinitions:
+  AccessTokenAuth:
+    description: To access todos and attachments
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
